Fixed bottom bar covering buttons earn using mobile

--- a/themes/dracula/dracula-theme.css
+++ b/themes/dracula/dracula-theme.css
@@ -317,7 +317,12 @@ div.react-select__control .react-select__multi-value {
 body {
 	background-color: var(--background);
 	color: var(--foreground);
-    padding: 4rem 0 0;
+    	padding: 4rem 0 0;
+}
+
+@media (max-width: 575.98px) and (orientation: portrait)
+body {
+	padding: 0 0 5rem 0;
 }
 
 .text-white {
